--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Feb 25 2021 19:37:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adb1" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,10 +29,13 @@
 </head>
 <body>
   <div data-ix="new-interaction" id="simplecookienotification_v01" class="cookie-pop cookies-box w-clearfix">
-    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
+    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div>
+    <a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a>
+  </div>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
-      <div class="w-container"><a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
+      <div class="w-container">
+        <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -44,19 +46,27 @@
             </a>
           </div>
         </div>
-        <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Start</a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Start</a>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a>
+              <a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a>
+            </nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a>
+            </nav>
+          </div>
+          <a href="kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a>
+        </nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -79,7 +89,10 @@
         <div class="w-slider-nav w-round"></div>
       </div>
       <div class="hero_container w-container">
-        <div class="hero_text">Doświadczeni specjaliści<br><span class="hero-regular">w centrum Białegostoku</span></div><a href="nasze-przychodnie/poradnia-rodzinna.html" class="button in-hero">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="button in-hero button-med-styl"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></div>
+        <div class="hero_text">Doświadczeni specjaliści<br><span class="hero-regular">w centrum Białegostoku</span></div>
+        <a href="nasze-przychodnie/poradnia-rodzinna.html" class="button in-hero">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a>
+        <a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="button in-hero button-med-styl"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a>
+      </div>
     </div>
     <div>
       <div class="news-container w-container">
@@ -87,19 +100,27 @@
         <div class="news-individual">
           <h2>Poradnia Rodzinna ( NFZ ) oferuje kompleksową opiekę lekarską, pielęgniarską i położniczą nad dziećmi i dorosłymi</h2>
           <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
-          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
+          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div>
+          <a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a>
+        </div>
         <div class="news-individual">
           <h2>Specjalista medycy rodzinnej, specjalista chorób wewnętrznych (internista), lekarz pediatra - wizyty prywatne</h2>
           <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
-          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
+          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div>
+          <a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a>
+        </div>
         <div class="news-individual">
           <h2>Pacjentki w ciąży prosimy o kontakt w celu umówienia się na bezpłatną edukację przedporodową z położną</h2>
           <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
-          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
+          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div>
+          <a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a>
+        </div>
         <div class="news-individual">
           <h2>Zapraszamy do polubienia nas na Facebooku</h2>
           <div class="news-date-sublabel">Czwartek, 07 grudnia 2017</div>
-          <div class="news-content-text">Zachęcamy do odwiedzin naszego fanpage</div><a href="https://www.facebook.com/centrummedycznewarszawska/" class="button red in-news"><span class="arrow-for-button">_</span> Sprawdź nas na Facebooku</a></div>
+          <div class="news-content-text">Zachęcamy do odwiedzin naszego fanpage</div>
+          <a href="https://www.facebook.com/centrummedycznewarszawska/" class="button red in-news"><span class="arrow-for-button">_</span> Sprawdź nas na Facebooku</a>
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -126,7 +147,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
