--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Feb 25 2021 19:37:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -29,10 +28,13 @@
 </head>
 <body>
   <div data-ix="new-interaction" id="simplecookienotification_v01" class="cookie-pop cookies-box w-clearfix">
-    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
+    <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div>
+    <a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a>
+  </div>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
-      <div class="w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
+      <div class="w-container">
+        <a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -43,19 +45,27 @@
             </a>
           </div>
         </div>
-        <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Start</a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="index.html" class="nav-link w-nav-link">Start</a>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a>
+              <a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a>
+            </nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="kontakt.html" aria-current="page" class="nav-link last-button w-nav-link w--current">Kontakt</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a>
+            </nav>
+          </div>
+          <a href="kontakt.html" aria-current="page" class="nav-link last-button w-nav-link w--current">Kontakt</a>
+        </nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -65,15 +75,27 @@
     <div>
       <div class="container123-189 kontakt w-container">
         <h1 class="in-contact">Kontakt</h1>
+        <div class="kontakt-emails">
+          <div class="kontakt-email is-h">Adres e-mail:</div>
+          <div class="kontakt-email">
+            <a href="mailto:rejestracja@cmwarszawska.pl">rejestracja@cmwarszawska.pl</a>
+          </div>
+        </div>
         <p class="kontakt-adres">Centrum Medyczne „Warszawska&quot;<br>ul. Bukowskiego 1 lok.2<br>15-066 Białystok</p>
-        <div class="contact-text-above-map important">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.<br><span><a href="#map2" class="red-link">Zobacz mapkę</a></span></div>
+        <div class="contact-text-above-map important">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.<br><span>
+            <a href="#map2" class="red-link">Zobacz mapkę</a>
+          </span></div>
         <div class="contact-text-buses">Dojazd autobusami komunikacji miejskiej ( BKM nr 28, 8, 2, 5, 21 )</div>
         <div class="all-contacts">
           <div class="phone-box">
             <div class="phone-title">Poradnia rodzinna <span class="inline-nfz-logo">_</span></div>
             <div class="phones-list">
-              <div class="contact-phone-label"><span class="phone-label-fixed-width">Tel:</span> <strong><a href="tel:858755355" data-rt-link-type="tel" cms-text-phone-link="numerTelefonuBezSpacji" cms-text="numerTelefonu" class="contact-phone-link">85 875 53 55</a></strong></div>
-              <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link"><a href="tel:+48512677311" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" cms-text="numerTelefonuKomorka" class="contact-phone-link">512 677 311</a></strong></div>
+              <div class="contact-phone-label"><span class="phone-label-fixed-width">Tel:</span> <strong>
+                  <a href="tel:858755355" data-rt-link-type="tel" cms-text-phone-link="numerTelefonuBezSpacji" cms-text="numerTelefonu" class="contact-phone-link">85 875 53 55</a>
+                </strong></div>
+              <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link">
+                  <a href="tel:+48512677311" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" cms-text="numerTelefonuKomorka" class="contact-phone-link">512 677 311</a>
+                </strong></div>
               <div class="open-hours"><span class="open-hours-title">Godziny otwarcia:</span><br> <span cms-text="kontaktGodzinyOtwarcia">PN - PT  w godzinach 8.00 - 18.00</span></div>
             </div>
             <div class="additional-contact"><span>Informacja medyczna całodobowo | tel. 194 39</span></div>
@@ -81,11 +103,15 @@
           <div class="phone-box medstyl">
             <div class="phone-title"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</div>
             <div class="phones-list">
-              <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link medstyl"><span><a href="tel:+48662149977" cms-text="numerTelefonuMedstyl" cms-text-phone-link="numerTelefonuMedstylBezSpacji" class="contact-phone-link medstyl">662 149 977</a></span></strong></div>
+              <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link medstyl"><span>
+                    <a href="tel:+48662149977" cms-text="numerTelefonuMedstyl" cms-text-phone-link="numerTelefonuMedstylBezSpacji" class="contact-phone-link medstyl">662 149 977</a>
+                  </span></strong></div>
             </div>
           </div>
-        </div><a href="https://goo.gl/maps/dnnUwcWX3AM2" class="maps-img-holder w-inline-block"><img src="images/cmwarszawskamap-1.png" alt=""></a>
-        <div id="map2" class="contact-text-above-map">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.</div><img src="images/mapka.png" alt="" class="mapka-png"></div>
+        </div>
+        <a href="https://goo.gl/maps/dnnUwcWX3AM2" class="maps-img-holder w-inline-block"><img src="images/cmwarszawskamap-1.png" alt=""></a>
+        <div id="map2" class="contact-text-above-map">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.</div><img src="images/mapka.png" alt="" class="mapka-png">
+      </div>
     </div>
     <div class="footer">
       <div class="w-container">
@@ -111,7 +137,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
