--- a/nasze-przychodnie/medstyl-medycyna-estetyczna.html
+++ b/nasze-przychodnie/medstyl-medycyna-estetyczna.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Feb 25 2021 19:37:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55e7f2977ccabd4334861a72" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,7 +29,8 @@
 <body>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
-      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
+      <div class="w-container">
+        <a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -41,19 +41,27 @@
             </a>
           </div>
         </div>
-        <nav role="navigation" class="nav-menu w-nav-menu"><a href="../index.html" class="nav-link w-nav-link">Start</a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="../index.html" class="nav-link w-nav-link">Start</a>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" aria-current="page" class="dropdown-link medstyl w-dropdown-link w--current"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a>
+              <a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" aria-current="page" class="dropdown-link medstyl w-dropdown-link w--current"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a>
+            </nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a>
+            </nav>
+          </div>
+          <a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a>
+        </nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -70,7 +78,9 @@
               </div>
               <div class="column-reset-padding subhead-center w-col w-col-6">
                 <div class="subnav-phones w-clearfix">
-                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white medstyl">_:</span> <strong><a href="tel:+48512677311" cms-text="numerTelefonuMedstyl" cms-text-phone-link="numerTelefonuMedstylBezSpacji" class="contact-phone-link medstyl">662 149 977</a></strong></div>
+                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white medstyl">_:</span> <strong>
+                      <a href="tel:+48512677311" cms-text="numerTelefonuMedstyl" cms-text-phone-link="numerTelefonuMedstylBezSpacji" class="contact-phone-link medstyl">662 149 977</a>
+                    </strong></div>
                   <div class="contact-phone-label in-top-right"><strong></strong></div>
                 </div>
               </div>
@@ -125,7 +135,9 @@
           <h2 class="oferta-heading medstyl">Certyfikaty</h2>
           <div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c01.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c01.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "group": "Certificates",
   "items": [
     {
@@ -138,8 +150,12 @@
       "type": "image"
     }
   ]
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c02_1.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c02_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "group": "Certificates",
   "items": [
     {
@@ -152,8 +168,12 @@
       "type": "image"
     }
   ]
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03_1.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c03.jpg",
@@ -166,8 +186,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c04.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c04.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c04_1.jpg",
@@ -180,8 +204,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c05.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c05.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c05_1.jpg",
@@ -194,8 +222,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c06_1.jpg",
@@ -208,10 +240,14 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
+}</script>
+                </a>
+              </div>
             </div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c07_1.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c07_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c07.jpg",
@@ -224,8 +260,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c08_1.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c08_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c08.jpg",
@@ -238,8 +278,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c09_1.jpg",
@@ -252,8 +296,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c10.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c10.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c10_1.jpg",
@@ -266,8 +314,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11_1.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c11.jpg",
@@ -280,8 +332,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12_1.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12_1.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c12.jpg",
@@ -294,10 +350,14 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
+}</script>
+                </a>
+              </div>
             </div>
             <div class="certificates-row w-row">
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c13.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c13.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c13.jpg",
@@ -310,8 +370,12 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c14.jpg" alt=""><script type="application/json" class="w-json">{
+}</script>
+                </a>
+              </div>
+              <div class="w-col w-col-2">
+                <a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c14.jpg" alt="">
+                  <script type="application/json" class="w-json">{
   "items": [
     {
       "url": "../images/c14.jpg",
@@ -324,7 +388,9 @@
     }
   ],
   "group": "Certificates"
-}</script></a></div>
+}</script>
+                </a>
+              </div>
               <div class="w-col w-col-2"></div>
               <div class="w-col w-col-2"></div>
               <div class="w-col w-col-2"></div>
@@ -332,7 +398,9 @@
             </div>
           </div>
         </div>
-        <div class="bottom-button"><a href="../kontakt.html" class="button"><span class="arrow-for-button">_</span> Umów się na wizytę</a></div>
+        <div class="bottom-button">
+          <a href="../kontakt.html" class="button"><span class="arrow-for-button">_</span> Umów się na wizytę</a>
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -359,7 +427,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
