--- a/nasze-przychodnie/poradnia-rodzinna.html
+++ b/nasze-przychodnie/poradnia-rodzinna.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Feb 25 2021 19:37:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55e5d891c8a4a0594583e1f5" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -30,7 +29,8 @@
 <body>
   <div class="wrapper">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
-      <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
+      <div class="w-container">
+        <a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
             <div class="nav-phone-label"><span class="nav-phone-inline-icon">_</span> <span cms-text="numerTelefonu">85 875 53 55</span></div>
@@ -41,19 +41,27 @@
             </a>
           </div>
         </div>
-        <nav role="navigation" class="nav-menu w-nav-menu"><a href="../index.html" class="nav-link w-nav-link">Start</a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="../index.html" class="nav-link w-nav-link">Start</a>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" aria-current="page" class="dropdown-link poradnia-rodzinna w-dropdown-link w--current">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="../nasze-przychodnie/poradnia-rodzinna.html" aria-current="page" class="dropdown-link poradnia-rodzinna w-dropdown-link w--current">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a>
+              <a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a>
+            </nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
+            <nav class="dropdown-menu w-dropdown-list">
+              <a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a>
+            </nav>
+          </div>
+          <a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a>
+        </nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -70,8 +78,12 @@
               </div>
               <div class="column-reset-padding subhead-center w-col w-col-6">
                 <div class="subnav-phones w-clearfix">
-                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong><a href="tel:+48512677311" cms-text="numerTelefonuKomorka" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" class="contact-phone-link">+48 512 677 311</a></strong></div>
-                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong><a href="tel:858755355" cms-text="numerTelefonu" cms-text-phone-link="numerTelefonuBezSpacji" class="contact-phone-link">85 875 53 55</a></strong></div>
+                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong>
+                      <a href="tel:+48512677311" cms-text="numerTelefonuKomorka" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" class="contact-phone-link">+48 512 677 311</a>
+                    </strong></div>
+                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong>
+                      <a href="tel:858755355" cms-text="numerTelefonu" cms-text-phone-link="numerTelefonuBezSpacji" class="contact-phone-link">85 875 53 55</a>
+                    </strong></div>
                 </div>
               </div>
             </div>
@@ -115,10 +127,13 @@
             <li>Lokal jest przystosowany do potrzeb osób niepełnosprawnych</li>
             <li>W lokalu znajduje się kącik zabaw dla dzieci oraz przewijak </li>
             <li>Pobieranie krwi do badań laboratoryjnych : poniedziałki, środy i piątki w godz. 8.00 - 9.00</li>
-          </ul><img src="../images/DSC00070-3.jpg" alt=""></div>
+          </ul><img src="../images/DSC00070-3.jpg" alt="">
+        </div>
         <div id="godziny-otwarcia" class="subnav-section">
           <h2 class="oferta-heading poradnia">Godziny otwarcia</h2>
-          <p class="content-paragraph"><span cms-text="rodzinnaGodzinyOtwarcia">Poradnia jest czynna od poniedziałku do piątku w godzinach 8.00 - 18.00.<br xmlns="http://www.w3.org/1999/xhtml">Zapisy na wizyty w godz. 8.00- 17.00 telefonicznie, osobiście, za pośrednictwem osób trzecich.</span><br><span><a href="../kontakt.html" class="blue-link">Kontakt</a></span></p>
+          <p class="content-paragraph"><span cms-text="rodzinnaGodzinyOtwarcia">Poradnia jest czynna od poniedziałku do piątku w godzinach 8.00 - 18.00.<br xmlns="http://www.w3.org/1999/xhtml">Zapisy na wizyty w godz. 8.00- 17.00 telefonicznie, osobiście, za pośrednictwem osób trzecich.</span><br><span>
+              <a href="../kontakt.html" class="blue-link">Kontakt</a>
+            </span></p>
         </div>
         <div id="personel-medyczny" class="subnav-section">
           <h2 class="oferta-heading poradnia">Personel medyczny</h2>
@@ -142,12 +157,24 @@
         </div>
         <div id="jak-zostac-pacjentem" class="subnav-section">
           <h2 class="oferta-heading poradnia">Jak zostać naszym pacjentem?</h2>
-          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza, pielęgniarki i położnej.<br><span class="button-download"><a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link">Pobierz formularz deklaracji wyboru lekarza<br></a></span><a href="https://cmwarszawska.pl/files/deklaracja-pielegniarki-poz.odt">Pobierz formularz deklaracji wyboru pielęgniarki</a><br><a href="https://cmwarszawska.pl/files/deklaracja-poloznej-poz.odt">Pobierz formularz deklaracji wyboru położnej</a><span class="button-download"><a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link"><br></a></span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.</p><img src="../images/DSC00247.jpg" alt="" class="cm-content-image"></div>
+          <p class="content-paragraph">Najpierw trzeba wypełnić formularz deklaracji wyboru lekarza, pielęgniarki i położnej.<br><span class="button-download">
+              <a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link">Pobierz formularz deklaracji wyboru lekarza<br></a>
+            </span>
+            <a href="https://cmwarszawska.pl/files/deklaracja-pielegniarki-poz.odt">Pobierz formularz deklaracji wyboru pielęgniarki</a><br>
+            <a href="https://cmwarszawska.pl/files/deklaracja-poloznej-poz.odt">Pobierz formularz deklaracji wyboru położnej</a><span class="button-download">
+              <a href="https://cmwarszawska.pl/files/deklaracja-lekarza-poz.odt" class="blue-link"><br></a>
+            </span><br>Przy składaniu deklaracji w Poradni należy okazać dowód tożsamości i podać numer PESEL. <br><br>Ubezpieczony ma prawo wyboru/zmiany lekarza, pielęgniarki i położnej POZ <br>trzy razy w roku bezpłatnie.
+          </p><img src="../images/DSC00247.jpg" alt="" class="cm-content-image">
+        </div>
         <div id="kalendarz-szczepie" class="subnav-section">
           <h2 class="oferta-heading poradnia">Kalendarz szczepień</h2>
-          <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download"><a href="http://pediatria.mp.pl/szczepieniaochronne/show.html?id=52627" target="_blank" class="blue-link">Zobacz kalendarz</a></span></p>
+          <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download">
+              <a href="http://pediatria.mp.pl/szczepieniaochronne/show.html?id=52627" target="_blank" class="blue-link">Zobacz kalendarz</a>
+            </span></p>
         </div>
-        <div class="bottom-button"><a href="../kontakt.html" class="button"><span class="arrow-for-button">_</span> Umów się na wizytę</a></div>
+        <div class="bottom-button">
+          <a href="../kontakt.html" class="button"><span class="arrow-for-button">_</span> Umów się na wizytę</a>
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -174,7 +201,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
