--- a/polityka-cookies.html
+++ b/polityka-cookies.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Feb 25 2021 19:37:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adb2" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -69,8 +68,8 @@
         </li>
         <li style="font-family: Arial;">
           <p style="font-family: Arial;"><strong style="font-family: Arial;">Administrator</strong> - firma <span id="firma" style="font-family: Arial;">Centrum Medyczne „Warszawska"
-ul. Bukowskiego 1 lok.2
-15-066 Białystok</span>, świadcząca usługi drogą elektroniczną za pośrednictwem Serwisu oraz przechowująca i uzyskująca dostęp do informacji w urządzeniach Użytkownika</p>
+              ul. Bukowskiego 1 lok.2
+              15-066 Białystok</span>, świadcząca usługi drogą elektroniczną za pośrednictwem Serwisu oraz przechowująca i uzyskująca dostęp do informacji w urządzeniach Użytkownika</p>
         </li>
         <li style="font-family: Arial;">
           <p style="font-family: Arial;"><strong style="font-family: Arial;">Użytkownik</strong> - osba fizyczna, dla której Administrator świadczy usługi drogą elektroniczna za pośrednictwem Serwisu.</p>
@@ -169,7 +168,7 @@ ul. Bukowskiego 1 lok.2
       </ul>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
